# axmol

./: .clang-format-ignore  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeOptions.md  INFRA.md  README.md  README_CN.md  manifest.json  setup.ps1
.github/workflows/: build.yml  ci.yml  clang-format.yml  debian.yml  genbindings.yml  publish.yml  verify-app.yml  verify.yml
1k/: 1kiss.ps1  build.profiles  clang.cmake  extensions.ps1  fetch.cmake  fetch.ps1  fsync.ps1  install-pwsh.sh  ios.cmake  manifest.ps1  platforms.cmake  pwshi.sh  windows.cmake
axmol/: CMakeLists.txt  axmol.cpp  axmol.h  axmol.natvis  axmolver.h  cocos2d.h
axmol/2d/: Action.cpp  Action.h  ActionCamera.cpp  ActionCamera.h  ActionCatmullRom.cpp  ActionCatmullRom.h  ActionCoroutine.cpp  ActionCoroutine.h  ActionEase.cpp  ActionEase.h  ActionGrid.cpp  ActionGrid.h  ActionGrid3D.cpp  ActionGrid3D.h  ActionInstant.cpp  ActionInstant.h  ActionInterval.cpp  ActionInterval.h  ActionManager.cpp  ActionManager.h  ActionPageTurn3D.cpp  ActionPageTurn3D.h  ActionProgressTimer.cpp  ActionProgressTimer.h  ActionTiledGrid.cpp  ActionTiledGrid.h  ActionTween.cpp  ActionTween.h  AnchoredSprite.cpp  AnchoredSprite.h  Animation.cpp  Animation.h  AnimationCache.cpp  AnimationCache.h  AtlasNode.cpp  AtlasNode.h  AutoPolygon.cpp  AutoPolygon.h  Camera.cpp  Camera.h  (+94 more)
axmol/3d/: AABB.cpp  AABB.h  Animate3D.cpp  Animate3D.h  Animation3D.cpp  Animation3D.h  AnimationCurve.h  AttachNode.cpp  AttachNode.h  BillBoard.cpp  BillBoard.h  Bundle3D.cpp  Bundle3D.h  Bundle3DData.cpp  Bundle3DData.h  CMakeLists.txt  Frustum.cpp  Frustum.h  Mesh.cpp  Mesh.h  MeshDataCache.cpp  MeshDataCache.h  MeshMaterial.cpp  MeshMaterial.h  MeshRenderer.cpp  MeshRenderer.h  MeshSkin.cpp  MeshSkin.h  MeshVertexIndexData.cpp  MeshVertexIndexData.h  MotionStreak3D.cpp  MotionStreak3D.h  OBB.cpp  OBB.h  ObjLoader.cpp  ObjLoader.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  (+10 more)
axmol/audio/: AudioCache.cpp  AudioCache.h  AudioDecoder.h  AudioDecoderEXT.mm  AudioDecoderManager.cpp  AudioDecoderMp3.h  AudioDecoderOpus.cpp  AudioDecoderWav.h  AudioEffects.h  AudioEffectsExtension.cpp  AudioEffectsExtension.h  AudioEngine.cpp  AudioEngine.h  AudioEngineImpl.cpp  AudioEngineImpl.h  AudioMacros.h  AudioPlayer.cpp  AudioPlayer.h  CMakeLists.txt  (+2 more)
axmol/platform/android/: Application-android.cpp  Application-android.h  CMakeLists.txt  Common-android.cpp  Device-android.cpp  FileUtils-android.cpp  FileUtils-android.h  GL-android.h  RenderViewImpl-android.cpp  RenderViewImpl-android.h  javaactivity-android.cpp
axmol/platform/android/dsl/: axmol.gradle
axmol/platform/android/java/src/dev/axmol/lib/: AxmolAccelerometer.java  AxmolActivity.java  AxmolEditBox.java  AxmolEngine.java  AxmolPlayer.java  AxmolRenderHost.java  AxmolRenderer.java  AxmolSurfaceViewGL.java  AxmolSurfaceViewVK.java  AxmolWebView.java  EGLLoggerWrapper.java  EditBoxHelper.java  GLSurfaceView.java  GameControllerAdapter.java  TextInputListener.java  WebViewHelper.java
axmol/platform/android/jni/: AxmolEngineJni.cpp  AxmolPlayerJni.cpp  Java_dev_axmol_lib_AxmolAccelerometer.cpp  Java_dev_axmol_lib_AxmolEngine.cpp  Java_dev_axmol_lib_AxmolRenderer.cpp  Java_dev_axmol_lib_BitmapHelper.cpp  Java_dev_axmol_lib_BitmapHelper.h  JniHelper.cpp  JniHelper.h  TouchesJni.cpp
axmol/platform/android/libaxmol/: build.gradle
core/: CMakeLists.txt  axmol.h  axmolver.h.in  cocos2d.h
docs/: DevSetup.md
extensions/: ExtensionExport.h  ExtensionMacros.h  README.md  axmol-ext.h
extensions/ImGui/: CMakeLists.txt  README.md
extensions/ImGui/shaders/: imgui_sprite.vert
extensions/ImGui/src/ImGui/: ImGuiPresenter.cpp  ImGuiPresenter.h  README.md  imconfig.h  imgui_impl_android.cpp  imgui_impl_axmol.cpp  imgui_impl_glfw.cpp
extensions/ImGui/src/ImGui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_axmol.cpp  imgui_impl_axmol.h  imgui_impl_glfw.cpp  imgui_impl_glfw.h
(+2310 files in other folders)
